Support schema version 0.7